nexus/nexus3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sonatype-nexus
  name: sonatype-nexus
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonatype-nexus
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sonatype-nexus
    spec:
      containers:
      - env:
        - name: NEXUS_CONTEXT
          value: nexus/
        image: sonatype/nexus3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /nexus/
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: sonatype-nexus
        ports:
        - containerPort: 8081
          protocol: TCP
          name: nexus
        - containerPort: 5000
          protocol: TCP
          name: docker
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /nexus/
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-data-volume
      volumes:
      - name: nexus-data-volume
        persistentVolumeClaim:
          claimName: sonatype-nexus-claim
      securityContext:
        fsGroup: 200
---
apiVersion: v1
kind: Service
metadata:
  name: sonatype-nexus-service
  namespace: kube-system
spec:
  ports:
  - port: 8081
    protocol: TCP
    name: nexus
  - port: 5000
    protocol: TCP
    name: docker
  selector:
    app: sonatype-nexus
